Added support for JSR310 in JSON

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <jersey.version>1.19.4</jersey.version>
         <joda-time.version>2.10.8</joda-time.version>
         <jsr305.version>3.0.2</jsr305.version>
-        <objenesis.version>2.6</objenesis.version>
+        <objenesis.version>3.2</objenesis.version>
         <servo-core.version>0.12.21</servo-core.version>
         <spring-cloud-dependencies.version>2021.0.6</spring-cloud-dependencies.version>
         <stax2-api.version>4.2.1</stax2-api.version>
@@ -356,6 +356,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jdk8</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
