--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=org.openwms:org.openwms.tms.transportation
 sonar.sources=src/main/java/
 sonar.java.binaries=target/classes
 sonar.java.libraries=target/*.jar
+sonar.java.source=21
