--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,28 +1,18 @@
 spring:
   application:
     name: tms-service
-  cloud:
-    config:
-      discovery:
-        enabled: false
-        service-id: openwms-config
-      enabled: false
-      fail-fast: true # true means retry
-      retry:
-        max-attempts: 120
-    discovery:
-      enabled: false
   security:
     user:
       name: user
       password: sa
   jpa:
-    database: h2
+    mapping-resources:
+      - META-INF/tms-orm.xml
     open-in-view: false
     properties:
       hibernate:
-        hbm2ddl:
-          import_files: transportation.sql
+        jdbc:
+          time_zone: UTC
       org:
         hibernate:
           envers:
@@ -30,11 +20,11 @@ spring:
             audit_table_suffix: _LOG
             revision_field_name: C_REV
             revision_type_field_name: C_REV_TYPE
+            default_schema: public
             audit_strategy_validity_end_rev_field_name: C_REV_END
             audit_strategy_validity_revend_timestamp_field_name: C_REVEND_TSTMP
             store_data_at_delete: true
     show-sql: false
-    mapping-resources: META-INF/tms-orm.xml
   jackson:
     date-format: "yyyy-MM-dd'T'HH:mm:ssXXX" # Only matches Dates no Instants!
   main:
@@ -61,8 +51,8 @@ owms:
     url: http://user:sa@localhost:8761
     zone: ${owms.eureka.url}/eureka/
   srv:
-    protocol: http
     hostname: localhost
+    protocol: http
   tms:
     block-tu-deletion-states:
 
@@ -76,13 +66,32 @@ eureka:
       defaultZone: ${owms.eureka.zone}  # Must be camelCase
   instance:
     hostname: ${owms.srv.hostname}
-    secure-port-enabled: false
-    non-secure-port-enabled: true
+    # Request a lease with a validity of 5 seconds. If until then the
+    # lease has not been renewed, it expires and the Eureka server can evict it.
+    # Default: 90s
+    lease-expiration-duration-in-seconds: 5
+
+    # The cadence of lease renewal, i.e. how often a heartbeat is sent to Eureka server.
+    # In this case every 2 seconds. Use this only for development / debugging. In production use the ...
+    # Default: 30s
+    lease-renewal-interval-in-seconds:    2
     metadata-map:
+      config-protocol: http # The protocol used to access the config server
       username: ${spring.security.user.name}
       password: ${spring.security.user.password}
       protocol: ${owms.srv.protocol}
       zone: ${owms.eureka.zone}
+    non-secure-port-enabled: true
+    secure-port-enabled: false
+
+info:
+  scm-url: "@scm.url@"
+  build-url: "@ciManagement.url@"
+
+logging:
+  file:
+    name: BOOT-TMS-Transportation.log
+    path: "/tmp/owms"
 
 management:
   endpoints:
@@ -104,11 +113,6 @@ management:
   info:
     git:
       mode: simple
-
-logging:
-  file:
-    name: BOOT-TMS-Transportation.log
-    path: "/tmp/owms"
 
 ---
 spring:
@@ -156,27 +160,6 @@ owms:
       exchange-name: dle.transportation
       queue-name: tms-dl-queue
     serialization: json
-
----
-spring:
-  config:
-    activate:
-      on-profile: HEROKU
-  main:
-    banner-mode: "OFF"
-
-owms:
-  srv:
-    protocol: https
-    hostname: openwms-tms-transportation.herokuapp.com
-
-eureka:
-  instance:
-    secure-port-enabled: true
-    non-secure-port-enabled: false
-    statusPageUrl: ${owms.srv.protocol}://${owms.srv.hostname}:${server.port}/actuator/info
-    healthCheckUrl: ${owms.srv.protocol}://${owms.srv.hostname}:${server.port}/actuator/health
-    homePageUrl: ${owms.srv.protocol}://${owms.srv.hostname}:${server.port}/actuator/
 
 ---
 spring:
@@ -236,3 +219,12 @@ spring:
         temp:
           use_jdbc_metadata_defaults: false
         default_schema: public
+    hibernate:
+      ddl-auto: update
+  main:
+    banner-mode: "off"
+  zipkin:
+    enabled: false
+    discovery-client-enabled: false
+    sender:
+      type: web
