--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,6 +5,10 @@ spring:
     user:
       name: user
       password: sa
+  jackson:
+    date-format: "yyyy-MM-dd'T'HH:mm:ssXXX" # Only matches Dates no Instants!
+    deserialization:
+      read-date-timestamps-as-nanoseconds: false
   jpa:
     mapping-resources:
       - META-INF/tms-orm.xml
@@ -61,7 +65,7 @@ eureka:
   client:
     instance-info-replication-interval-seconds: 10 # default is 30
     service-url:
-      defaultZone: ${owms.eureka.zone}  # Must be camelCase
+      defaultZone: ${owms.eureka.zone} # Must be camelCase
   instance:
     hostname: ${owms.srv.hostname}
     # Request a lease with a validity of 5 seconds. If until then the
@@ -80,6 +84,7 @@ eureka:
       protocol: ${owms.srv.protocol}
       zone: ${owms.eureka.zone}
     non-secure-port-enabled: true
+    prefer-ip-address: true
     secure-port-enabled: false
 
 info:
@@ -225,4 +230,4 @@ spring:
     enabled: false
     discovery-client-enabled: false
     sender:
-      type: web
+      type: rabbit
