#23: Deploy to Sonatype

--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build
         run: >
           ./mvnw deploy
-          -DsurefireArgs=-Dspring.profiles.active=ASYNCHRONOUS,TEST
+          -DsurefireArgs=-Dspring.profiles.active=TEST
           -Dspring.rabbitmq.host=localhost
           -Dci.buildNumber=$GITHUB_RUN_NUMBER
           -U -B $MAVEN_OPTS
