--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -17,17 +17,6 @@ spring:
       hibernate:
         jdbc:
           time_zone: UTC
-      org:
-        hibernate:
-          envers:
-            audit_strategy: org.hibernate.envers.strategy.DefaultAuditStrategy
-            audit_table_suffix: _LOG
-            revision_field_name: C_REV
-            revision_type_field_name: C_REV_TYPE
-            default_schema: public
-            audit_strategy_validity_end_rev_field_name: C_REV_END
-            audit_strategy_validity_revend_timestamp_field_name: C_REVEND_TSTMP
-            store_data_at_delete: true
     show-sql: false
   main:
     allow-bean-definition-overriding: true
@@ -36,27 +25,24 @@ spring:
       date-time: "yyyy-MM-dd'T'HH:mm:ssXXX" # Must match the pattern how of @JsonFormat field annotation patterns
       date: yyyy-MM-dd
       time: HH:mm:ss
-  zipkin:
-    sender:
-      type: web
-
-feign:
-  httpclient:
-    connection-timeout: 30000
-    connection-timer-repeat: 30000
-ribbon:
-  connectTimeout: 30000
-  ReadTimeout: 30000
+  output:
+    ansi:
+      enabled: always
 
 owms:
   eureka:
-    url: http://user:sa@localhost:8761
+    url: http://${owms.eureka.user.name}:${owms.eureka.user.password}@localhost:8761
+    user:
+      name: user
+      password: sa
     zone: ${owms.eureka.url}/eureka/
   srv:
     hostname: localhost
     protocol: http
   tms:
     block-tu-deletion-states:
+  tracing:
+    url: http://localhost:4317
 
 server:
   port: ${PORT:8131}
@@ -64,6 +50,7 @@ server:
 eureka:
   client:
     instance-info-replication-interval-seconds: 10 # default is 30
+    registryFetchIntervalSeconds: 5 # SBA
     service-url:
       defaultZone: ${owms.eureka.zone} # Must be camelCase
   instance:
@@ -78,11 +65,16 @@ eureka:
     # Default: 30s
     lease-renewal-interval-in-seconds:    2
     metadata-map:
+      group: TMS
       config-protocol: http # The protocol used to access the config server
       username: ${spring.security.user.name}
       password: ${spring.security.user.password}
       protocol: ${owms.srv.protocol}
+      startup: ${random.int} # SBA
       zone: ${owms.eureka.zone}
+      prometheus.scrape: "true"
+      prometheus.path: "/actuator/prometheus"
+      prometheus.port: ${server.port}
     non-secure-port-enabled: true
     prefer-ip-address: true
     secure-port-enabled: false
@@ -90,11 +82,6 @@ eureka:
 info:
   scm-url: "@scm.url@"
   build-url: "@ciManagement.url@"
-
-logging:
-  file:
-    name: BOOT-TMS-Transportation.log
-    path: "/tmp/owms"
 
 management:
   endpoints:
@@ -104,18 +91,28 @@ management:
   health:
     rabbit:
       enabled: false
-  metrics:
-    web:
-      server:
-        request:
-          autotime:
-            enabled: true
-    export:
-      prometheus:
-        enabled: true
   info:
     git:
       mode: simple
+  metrics:
+    distribution:
+      percentiles-histogram:
+        greeting: true
+        http:
+          server:
+            requests: true
+    tags:
+      application: ${spring.application.name}
+  otlp:
+    tracing:
+      endpoint: ${owms.tracing.url}
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+  tracing:
+    sampling:
+      probability: 1.0
 
 ---
 spring:
@@ -185,11 +182,6 @@ spring:
     show-sql: false
   main:
     banner-mode: "off"
-  zipkin:
-    enabled: false
-    discovery-client-enabled: false
-    sender:
-      type: rabbit
 
 ---
 spring:
@@ -218,16 +210,8 @@ spring:
     generate-ddl: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         temp:
           use_jdbc_metadata_defaults: false
         default_schema: public
     hibernate:
       ddl-auto: update
-  main:
-    banner-mode: "off"
-  zipkin:
-    enabled: false
-    discovery-client-enabled: false
-    sender:
-      type: rabbit
