--- a/.github/workflows/master-docs.yml
+++ b/.github/workflows/master-docs.yml
@@ -72,11 +72,10 @@ jobs:
           -DDB_HOST=localhost
           -DDB_USERNAME=KARL
           -DDB_PASSWORD=KARL
-          -Dscmuser=$PUSHKEY
           -Dscmpublish.pubScmUrl=scm:git:https://openwms:$PUSHKEY@github.com/openwms/org.openwms.tms.transportation.git
           -DdeveloperConnectionUrl=scm:git:https://openwms:$PUSHKEY@github.com/openwms/org.openwms.tms.transportation.git
           -Dci.buildNumber=$GITHUB_RUN_NUMBER
-          -Pschemagen,release -B $MAVEN_OPTS
+          -Prelease,coverage -B $MAVEN_OPTS
         env:
           PUSHKEY: ${{ secrets.GITHUB_TOKEN }}
       - name: Sonar
