#24 Failed IT must break the build

--- a/.github/workflows/master-docs.yml
+++ b/.github/workflows/master-docs.yml
@@ -63,7 +63,7 @@ jobs:
           git config --global user.name "CI Server"
       - name: Site
         run: >
-          ./mvnw post-integration-test site scm-publish:publish-scm failsafe:verify
+          ./mvnw verify site scm-publish:publish-scm
           -DM2_REPO_DIR=/home/runner/.m2/repository
           -DsurefireArgs=-Dspring.profiles.active=TEST,TESTPG
           -Dargs=-Dspring.profiles.active=TEST,TESTPG
