--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,10 @@
 
     <properties>
         <checker-qual.version>3.43.0</checker-qual.version>
-        <common.service.lib.version>3.0.0-SNAPSHOT</common.service.lib.version>
-        <core.test.arch.version>1.0.0-SNAPSHOT</core.test.arch.version>
-        <core.units.version>0.7.0-SNAPSHOT</core.units.version>
-        <core.version>3.0.0-SNAPSHOT</core.version>
+        <common.service.lib.version>3.0.0</common.service.lib.version>
+        <core.test.arch.version>1.0.0</core.test.arch.version>
+        <core.units.version>0.7.0</core.units.version>
+        <core.version>3.0.0</core.version>
         <error_prone_annotations.version>2.28.0</error_prone_annotations.version>
         <httpclient.version>4.5.14</httpclient.version>
         <spring-cloud-dependencies.version>2024.0.0</spring-cloud-dependencies.version>
