--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/>
     </parent>
     <artifactId>org.openwms.tms.transportation</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>OpenWMS.org TMS: Transportation Services</name>
     <description>Service to coordinate TransportOrders in automated warehouses</description>
     <url>https://openwms.github.io/${project.artifactId}/index.html</url>
